# toy-compiler

./: CMakeLists.txt  LICENSE  example.ks
include/: ast.hpp  lexer.hpp
src/: ast.cpp  lexer.cpp  main.cpp
